gcc/testsuite/rust/rustc/ui/parser/extern-no-fn.rs
extern {
    f(); // { dg-error "" "" { target *-*-* } }
}

fn main() {
}

